--- a/final-year-project/package.json
+++ b/final-year-project/package.json
@@ -21,10 +21,13 @@
     "@ionic/react-router": "^8.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.8.3",
     "d3": "^7.9.0",
     "ionicons": "^7.0.0",
+    "plotly.js": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.6.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4"
   },
@@ -37,6 +40,7 @@
     "@types/d3": "^7.4.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-plotly.js": "^2.6.3",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.1",
     "cypress": "^13.5.0",
