--- a/final-year-project/package.json
+++ b/final-year-project/package.json
@@ -12,7 +12,6 @@
     "lint": "eslint",
     "start": "node server.js",
     "heroku-postbuild": "npm run build"
-
   },
   "dependencies": {
     "@capacitor/app": "6.0.1",
@@ -25,6 +24,7 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.8.3",
+    "chart.js": "^4.4.9",
     "d3": "^7.9.0",
     "ionicons": "^7.0.0",
     "plotly.js": "^3.0.1",
@@ -40,6 +40,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/chart.js": "^2.9.41",
     "@types/d3": "^7.4.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -55,5 +56,9 @@
     "vite": "~5.2.0",
     "vitest": "^0.34.6"
   },
+  "engines": {
+  "node": "18.x"
+  },
   "description": "An Ionic project"
+  
 }
