Fix server crash: switch to CommonJS with .cjs

--- a/final-year-project/package.json
+++ b/final-year-project/package.json
@@ -10,7 +10,7 @@
     "test.e2e": "cypress run",
     "test.unit": "vitest",
     "lint": "eslint",
-    "start": "node server.js",
+    "start": "node server.cjs",
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
