--- a/final-year-project/package.json
+++ b/final-year-project/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.8.3",
     "chart.js": "^4.4.9",
     "d3": "^7.9.0",
+    "express": "^5.1.0",
     "ionicons": "^7.0.0",
     "plotly.js": "^3.0.1",
     "react": "^18.2.0",
@@ -57,8 +58,7 @@
     "vitest": "^0.34.6"
   },
   "engines": {
-  "node": "18.x"
+    "node": "18.x"
   },
   "description": "An Ionic project"
-  
 }
