--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "node": "18.x"
   },
   "scripts": {
-    "start": "cd final-year-project && npm start",
+    "start": "node server.js",
     "heroku-postbuild": "cd final-year-project && npm install && npm run build"
   },
   "dependencies": {
     "chart.js": "^4.4.8",
-    "react-chartjs-2": "^5.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "express": "^4.18.2"
   }
 }
