Fix Procfile to point directly to server.cjs

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": "18.x"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node final-year-project/server.cjs",
     "heroku-postbuild": "cd final-year-project && npm install && npm run build"
   },
   "dependencies": {
